--- a/public/index.html
+++ b/public/index.html
@@ -45,5 +45,6 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <script src="./js/show.js"></script>
   </body>
 </html>
